--- a/src/lib/styles/buttons.scss
+++ b/src/lib/styles/buttons.scss
@@ -1,57 +1,67 @@
 .cw-button {
-    all: unset;
-    font-size: var(--button-font-size);
-    text-transform: uppercase;
-    font-weight: 700;
-    padding: 0.85rem 1rem;
-    display: inline-block;
-    cursor: pointer;
-    border: none;
-    user-select: none;
-    color: white;
-    transition: background-color 0.1s ease, color 0.1s ease;
+	all: unset;
+	font-size: var(--button-font-size);
+	text-transform: uppercase;
+	font-weight: 700;
+	padding: 0.85rem 1rem;
+	display: inline-block;
+	cursor: pointer;
+	border: none;
+	user-select: none;
+	color: white;
+	transition:
+		background-color 0.1s ease,
+		color 0.1s ease;
+	border-top-left-radius: 0.5rem;
+	border-bottom-right-radius: 0.5rem;
+	corner-shape: bevel;
 
-    &:focus {
-        outline: none;
-    }
+	&:focus {
+		outline: none;
+	}
 
-    &.full-width {
-        width: -webkit-fill-available;
-        text-align: center
-    }
+	&.full-width {
+		width: -webkit-fill-available;
+		text-align: center;
+	}
 
-    &.small {
-        padding: 0.50rem 1rem;
-    }
+	&.small {
+		padding: 0.5rem 1rem;
+	}
 }
 
 .cw-button--primary {
-    @extend .cw-button;
-    background-color: var(--accent-color);
+	@extend .cw-button;
+	background-color: var(--accent-color);
 
-    &:hover {
-        background-color: #b16200;
-    }
+	&:hover {
+		background-color: #b16200;
+	}
+}
+
+button {
+	color: white;
+	font-family: "Inter Display";
 }
 
 .cw-button--secondary {
-    @extend .cw-button;
-    background-color: var(--button-secondary-bg);
-    color: light-dark(#101010, #ffffff);
+	@extend .cw-button;
+	background-color: var(--secondary-container-color);
+	color: light-dark(#123123, #ffffff);
 
-    &:hover {
-        background-color: white;
-        color: black;
-    }
+	&:hover {
+		background-color: white;
+		color: black;
+	}
 }
 
 .cw-button--stroked {
-    @extend .cw-button;
-    outline: 0.125rem solid white;
-    outline-offset: -0.125rem;
+	@extend .cw-button;
+	outline: 0.125rem solid white;
+	outline-offset: -0.125rem;
 
-    &:hover {
-        background-color: white;
-        color: black;
-    }
+	&:hover {
+		background-color: white;
+		color: black;
+	}
 }
