--- a/src/lib/styles/typography.scss
+++ b/src/lib/styles/typography.scss
@@ -19,6 +19,10 @@ h1,
 		text-transform: none;
 		font-size: 4.35rem;
 		letter-spacing: -0.02em;
+
+		@media (max-width: 768px) {
+			font-size: 52px;
+		}
 	}
 
 	@media (max-width: 768px) {
@@ -122,6 +126,10 @@ p {
 		@media (max-width: 768px) {
 			font-size: 1rem;
 		}
+	}
+
+	&.marker {
+		font-family: "Mansalva";
 	}
 }
 
